--- a/themes/PAFF/less/pages/locations.less
+++ b/themes/PAFF/less/pages/locations.less
@@ -6,3 +6,16 @@
     }
   }
 }
+.view-film-event-location{
+  .view-content{
+    .views-row{
+      border: 1px solid #ffffff;
+      margin-bottom: 15px;
+      border-radius: 3px;
+      padding: 5px 0;
+      &:last-child{
+        margin-bottom: 0;
+      }
+    }
+  }
+}
