node selection class

--- a/themes/PAFF/templates/node/film/node--film--mini-teaser.html.twig
+++ b/themes/PAFF/templates/node/film/node--film--mini-teaser.html.twig
@@ -67,7 +67,8 @@
 #}
 {%
   set classes = [
-    node.bundle|clean_class,
+node.field_selection.0.entity.label|clean_class,
+node.bundle|clean_class,
     node.isPromoted() ? 'is-promoted',
     node.isSticky() ? 'is-sticky',
     not node.isPublished() ? 'is-unpublished',
