--- a/themes/PAFF/less/bootstrap/wells.less
+++ b/themes/PAFF/less/bootstrap/wells.less
@@ -36,12 +36,12 @@
     background-image:url("../images/news_pozadina.jpg");
     background-size: cover;
     padding-bottom: 50px;
-    a {
-      color:@brand-news;
-      &:hover{
-        color: #4e4a82;
-      }
-    }
+//    a {
+//      color:@brand-news;
+  //    &:hover{
+    //    color: #4e4a82;
+      //}
+    //}
   }
 }
 
