--- a/themes/PAFF/templates/node/film/node--film.html.twig
+++ b/themes/PAFF/templates/node/film/node--film.html.twig
@@ -82,7 +82,7 @@
     <div class="film-margin">
     {{content.field_image}}
   </div>
-  <div>
+  <div class="row">
   <div class="col-md-3">
   {{content.field_director}}
   {{content.field_producer}}
@@ -123,10 +123,10 @@
         </div>
 
         <div>
-          <div class="col-md-3">
+          <div class="col-md-6">
             {{content.field_title_original}}
           </div>
-          <div class="col-md-3">
+          <div class="col-md-6">
             {{content.field_date_and_time}}
           </div>
         </div>
