--- a/themes/PAFF/less/overrides.less
+++ b/themes/PAFF/less/overrides.less
@@ -14,7 +14,7 @@
 @import "component/table-drag";
 @import "component/tabs";
 @import "component/toolbar";
-
+@import "pages/utilities";
 // jQuery UI style overrides.
 @import "jquery-ui/autocomplete";
 
