--- a/themes/PAFF/less/bootstrap/variables.less
+++ b/themes/PAFF/less/bootstrap/variables.less
@@ -27,7 +27,8 @@
 @brand-event:           #04b6d6;
 @brand-location:        #ee9725;
 @brand-film:            #42bf9b;
-
+@brand-svetla:          #ed5ca7;
+@brand-rani-radovi:     #e71d23;
 //== Scaffolding
 //
 //## Settings for some of the most global styles.
