--- a/themes/PAFF/less/pages/news.less
+++ b/themes/PAFF/less/pages/news.less
@@ -1,6 +1,7 @@
 .region-sidebar-second {
   margin-left: 10px;
-  a:hover {
+  .block{
+  h3 > a:hover, a:hover {
     color:@brand-primary;
   }
   .field-content {
@@ -12,5 +13,6 @@
         }
       }
     }
+  }
   }
 }
