--- a/themes/PAFF/less/overrides.less
+++ b/themes/PAFF/less/overrides.less
@@ -15,6 +15,7 @@
 @import "component/tabs";
 @import "component/toolbar";
 @import "pages/utilities";
+@import "regions/sidebar";
 // jQuery UI style overrides.
 @import "jquery-ui/autocomplete";
 
