--- a/themes/PAFF/less/regions/footer.less
+++ b/themes/PAFF/less/regions/footer.less
@@ -4,4 +4,12 @@
   &.background-img{
     background-position: top center;
   }
+  .nav{
+    a{
+      display: inline-block;
+      &:hover{
+        background-color: transparent;
+      }
+    }
+  }
 }
