--- a/themes/PAFF/templates/node/news/node--article--slider.html.twig
+++ b/themes/PAFF/templates/node/news/node--article--slider.html.twig
@@ -94,7 +94,7 @@
   <div class="col-md-6">
     {{content.field_image}}
   </div>
-    <div class="col-md-6 well-vesti">
+    <div class="col-md-6">
       {{ title_prefix }}
       {% if not page %}
       <h2{{ title_attributes }}>
