--- a/themes/PAFF/templates/node/news/node--article--teaser.html.twig
+++ b/themes/PAFF/templates/node/news/node--article--teaser.html.twig
@@ -91,7 +91,7 @@
       <div class="col-md-3">
           {{content.field_image}}
       </div>
-      <div class="col-md-9 well-vesti">
+      <div class="col-md-9">
           {{content.body}}
       </div>
   </div>
