--- a/themes/PAFF/templates/node/film/node--film--slider.html.twig
+++ b/themes/PAFF/templates/node/film/node--film--slider.html.twig
@@ -67,6 +67,7 @@
 #}
 {%
   set classes = [
+    node.field_selection.0.entity.label|clean_class,
     node.bundle|clean_class,
     node.isPromoted() ? 'is-promoted',
     node.isSticky() ? 'is-sticky',
@@ -93,7 +94,7 @@
   <div class="col-md-6">
     {{content.field_image}}
   </div>
-  <div class="col-md-6 well-film"">
+  <div class="col-md-6">
     {{ title_prefix }}
     {% if not page %}
       <h2{{ title_attributes }} >
