--- a/themes/PAFF/less/bootstrap/wells.less
+++ b/themes/PAFF/less/bootstrap/wells.less
@@ -43,53 +43,53 @@
     //}
   }
 }
-
-.well-vesti {
-  a {
-  color: @brand-news;
-    &:hover{
-      color: #4e4a82;
-    }
-    &:focus{
-      outline: none;
-      box-shadow: none;
-    }
-  }
-}
-.well-film {
-  a{
-    color: @brand-film;
-    &:hover {
-      color: @brand-primary;
-    }
-    &:focus{
-      outline: none;
-      box-shadow: none;
-    }
-  }
-}
-
-.well-location{
-  a  {
-    color: @brand-location;
-    &:hover {
-      color: @brand-warning;
-    }
-    &:focus{
-      outline: none;
-      box-shadow: none;
-    }
-  }
-}
-.well-event{
-  a  {
-    color: @brand-event;
-    &:hover {
-      color: #0495af;
-    }
-    &:focus{
-      outline: none;
-      box-shadow: none;
-    }
-  }
-}
+//
+//.well-vesti {
+//  a {
+//  color: @brand-news;
+//    &:hover{
+//      color: #4e4a82;
+//    }
+//    &:focus{
+//      outline: none;
+//      box-shadow: none;
+//    }
+//  }
+//}
+//.well-film {
+//  a{
+//    color: @brand-film;
+//    &:hover {
+//      color: @brand-primary;
+//    }
+//    &:focus{
+//      outline: none;
+//      box-shadow: none;
+//    }
+//  }
+//}
+//
+//.well-location{
+//  a  {
+//    color: @brand-location;
+//    &:hover {
+//      color: @brand-warning;
+//    }
+//    &:focus{
+//      outline: none;
+//      box-shadow: none;
+//    }
+//  }
+//}
+//.well-event{
+//  a  {
+//    color: @brand-event;
+//    &:hover {
+//      color: #0495af;
+//    }
+//    &:focus{
+//      outline: none;
+//      box-shadow: none;
+//    }
+//  }
+//}
