polish hover in utilities

--- a/themes/PAFF/less/pages/utilities.less
+++ b/themes/PAFF/less/pages/utilities.less
@@ -1,30 +1,48 @@
 .ponocna-jeza{
-  h2{
+  h2, a{
     color: @brand-film;
+    &:hover{
+      color: #3bab8b;
+    }
   }
 }
 .pafforama{
-  h2{
+  h2,a{
     color: @brand-news;
+    &:hover{
+      color: #585492;
+    }
   }
 }
 .rani-radovi{
-  h2{
+  h2,a{
     color: @brand-rani-radovi;
+    &:hover{
+      color: #d0161c;
+    }
   }
 }
 .svetionici{
-  h2{
+  h2,a{
     color: @brand-location;
+    &:hover{
+      color: #d58010;
+    }
   }
 }
 .svetla-buducnost{
-  h2{
+  h2,a{
     color: @brand-svetla;
+    &:hover{
+      color: #e8308f;
+    }
   }
 }
 .the-amazed-spectator{
-  h2{
+  h2,a{
     color: @brand-event;
+    &:hover{
+      color: #04abc8;
+    }
   }
 }
