--- a/themes/PAFF/css/style.css
+++ b/themes/PAFF/css/style.css
@@ -6858,7 +6858,7 @@ body.toolbar-fixed.toolbar-vertical.toolbar-tray-open.toolbar-fixed .toolbar-tra
 }
 .page-node-type-film .field--label {
   font-size: 18px;
-  color: #f4b2b4;
+  color: #003727;
 }
 .region-sidebar-second {
   margin-left: 10px;
