--- a/themes/PAFF/less/regions/footer.less
+++ b/themes/PAFF/less/regions/footer.less
@@ -5,6 +5,9 @@
     background-position: top center;
   }
   .nav{
+    h2{
+      display: none;
+    }
     a{
       display: inline-block;
       &:hover{
