--- a/themes/PAFF/less/pages/utilities.less
+++ b/themes/PAFF/less/pages/utilities.less
@@ -1,48 +1,90 @@
 .ponocna-jeza{
-  h2, a{
+  h2{
+    color: @brand-film;
+  }
+   a{
     color: @brand-film;
     &:hover{
       color: #3bab8b;
     }
+     &:focus{
+       box-shadow: none;
+       outline: none;
+     }
   }
 }
 .pafforama{
-  h2,a{
+  h2{
+    color: @brand-news;
+  }
+  a{
     color: @brand-news;
     &:hover{
       color: #585492;
     }
+    &:focus{
+      box-shadow: none;
+      outline: none;
+    }
   }
 }
 .rani-radovi{
-  h2,a{
+  h2{
+    color: @brand-rani-radovi;
+  }
+  a{
     color: @brand-rani-radovi;
     &:hover{
       color: #d0161c;
     }
+    &:focus{
+      box-shadow: none;
+      outline: none;
+    }
   }
 }
 .svetionici{
-  h2,a{
+  h2{
+    color: @brand-location;
+  }
+  a{
     color: @brand-location;
     &:hover{
       color: #d58010;
     }
+    &:focus{
+      box-shadow: none;
+      outline: none;
+    }
   }
 }
 .svetla-buducnost{
-  h2,a{
+  h2{
+    color: @brand-svetla;
+  }
+  a{
     color: @brand-svetla;
     &:hover{
       color: #e8308f;
     }
+    &:focus{
+      box-shadow: none;
+      outline: none;
+    }
   }
 }
 .the-amazed-spectator{
-  h2,a{
+  h2{
+    color: @brand-event;
+  }
+  a{
     color: @brand-event;
     &:hover{
       color: #04abc8;
+    }
+    &:focus{
+      box-shadow: none;
+      outline: none;
     }
   }
 }
