--- a/themes/PAFF/less/regions/footer.less
+++ b/themes/PAFF/less/regions/footer.less
@@ -4,14 +4,18 @@
   &.background-img{
     background-position: top center;
   }
-  .nav{
-    h2{
-      display: none;
-    }
-    a{
-      display: inline-block;
-      &:hover{
-        background-color: transparent;
+  .region-footer{
+    nav{
+      h2{
+        display: none;
+      }
+      .menu{
+        a{
+          display: inline-block;
+          &:hover{
+            background-color: transparent;
+          }
+        }
       }
     }
   }
