--- a/themes/PAFF/less/regions/content.less
+++ b/themes/PAFF/less/regions/content.less
@@ -27,6 +27,11 @@
 }
 .news-margin {
 margin-top:15px;
+  h2{
+    @media (min-width: @screen-sm){
+      margin-top: 0;
+    }
+  }
 }
 .slider-slider-nav {
   .views-row {
