--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -44,18 +44,20 @@
     font-size:28px;
   }
 }
-.date:after{
-  content:"";
-  display:inline-block;
-  vertical-align: middle;
-  height:100px;
-  width:1px;
-  border-right: 1px solid #969696;
-  padding-right: 20px;
-}
 .date{
   color:black;
   font-size:36px;
+  @media (min-width: @screen-sm){
+    &:after{
+      content:"";
+      display:inline-block;
+      vertical-align: middle;
+      height:100px;
+      width:1px;
+      border-right: 1px solid #969696;
+      padding-right: 20px;
+    }
+  }
 }
 .navbar{
   .container {
@@ -73,6 +75,7 @@
       display:inline-block;
     }
     .block-language {
+      float: right;
       display: inline-block;
       a {
         color: white;
@@ -98,6 +101,9 @@
         font-size: 18px;
         text-align: center;
       }
+      @media (min-width: @screen-sm){
+        float: none;
+      }
     }
   }
   @media (min-width: @screen-md){
@@ -108,7 +114,6 @@
       text-transform: uppercase;
       &:first-child a{
         padding-left: 15px;
-        margin-right: 45px;
       }
       + li{
         margin: 0 45px;
