--- a/themes/PAFF/less/regions/sidebar.less
+++ b/themes/PAFF/less/regions/sidebar.less
@@ -1,18 +1,25 @@
 .region-sidebar-second {
-  margin-left: 10px;
+  margin-top: 25px;
   .block{
-  h3 > a:hover, a:hover {
-    color:@brand-primary;
-  }
-  .field-content {
-    a {
-      display: inline-block;
-      i{
-        &:hover{
-        color:@brand-primary;
+    h3{
+      font-size: 22px;
+    }
+    h3 > a:hover, a:hover {
+      color:@brand-primary;
+    }
+    .field-content {
+      a {
+        display: inline-block;
+        i{
+          &:hover{
+          color:@brand-primary;
+          }
         }
       }
     }
   }
+  @media (min-width: @screen-md){
+    margin-top: 0;
+    margin-left: 10px;
   }
 }
