--- a/themes/PAFF/templates/node/news/node--article--slider.html.twig
+++ b/themes/PAFF/templates/node/news/node--article--slider.html.twig
@@ -90,7 +90,7 @@
   {% endif %}
 
   <div{{ content_attributes.addClass('content') }}>
-  <div class="row">
+  <div>
   <div class="col-md-6">
     {{content.field_image}}
   </div>
