--- a/themes/PAFF/templates/page.html.twig
+++ b/themes/PAFF/templates/page.html.twig
@@ -68,10 +68,10 @@
           <h2 class="date">07.-11. September, 2016.</h2>
         </div>
         <div class="in-block social">
-          <a href="{{ url('view.frontpage.page_1')  }}"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/pancevofilmfestival"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
         </div>
         <div class="in-block social">
-          <a href="{{ url('view.frontpage.page_1')  }}"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/PancevoFilmFest"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
         </div>
       </div><div class="clearfix"></div>
     </div>
