change names of classes in utilities

--- a/themes/PAFF/css/style.css
+++ b/themes/PAFF/css/style.css
@@ -6912,16 +6912,16 @@ p:last-child,
 .loc-bot-margin {
   margin-bottom: 15px;
 }
-.ponocna-jeza h2 {
+.midnight-creeps h2 {
   color: #42bf9b;
 }
-.ponocna-jeza a {
+.midnight-creeps a {
   color: #42bf9b;
 }
-.ponocna-jeza a:hover {
+.midnight-creeps a:hover {
   color: #3bab8b;
 }
-.ponocna-jeza a:focus {
+.midnight-creeps a:focus {
   box-shadow: none;
   outline: none;
 }
@@ -6938,42 +6938,42 @@ p:last-child,
   box-shadow: none;
   outline: none;
 }
-.rani-radovi h2 {
+.early-works h2 {
   color: #e71d23;
 }
-.rani-radovi a {
+.early-works a {
   color: #e71d23;
 }
-.rani-radovi a:hover {
+.early-works a:hover {
   color: #d0161c;
 }
-.rani-radovi a:focus {
+.early-works a:focus {
   box-shadow: none;
   outline: none;
 }
-.svetionici h2 {
+.lighthouses h2 {
   color: #ee9725;
 }
-.svetionici a {
+.lighthouses a {
   color: #ee9725;
 }
-.svetionici a:hover {
+.lighthouses a:hover {
   color: #d58010;
 }
-.svetionici a:focus {
+.lighthouses a:focus {
   box-shadow: none;
   outline: none;
 }
-.svetla-buducnost h2 {
+.bright-future h2 {
   color: #ed5ca7;
 }
-.svetla-buducnost a {
+.bright-future a {
   color: #ed5ca7;
 }
-.svetla-buducnost a:hover {
+.bright-future a:hover {
   color: #e8308f;
 }
-.svetla-buducnost a:focus {
+.bright-future a:focus {
   box-shadow: none;
   outline: none;
 }
