--- a/themes/PAFF/less/pages/utilities.less
+++ b/themes/PAFF/less/pages/utilities.less
@@ -1,4 +1,4 @@
-.ponocna-jeza{
+.midnight-creeps{
   h2{
     color: @brand-film;
   }
@@ -28,7 +28,7 @@
     }
   }
 }
-.rani-radovi{
+.early-works{
   h2{
     color: @brand-rani-radovi;
   }
@@ -43,7 +43,7 @@
     }
   }
 }
-.svetionici{
+.lighthouses{
   h2{
     color: @brand-location;
   }
@@ -58,7 +58,7 @@
     }
   }
 }
-.svetla-buducnost{
+.bright-future{
   h2{
     color: @brand-svetla;
   }
