--- a/themes/PAFF/templates/node/film/node--film.html.twig
+++ b/themes/PAFF/templates/node/film/node--film.html.twig
@@ -84,18 +84,18 @@ set classes = [
     {{content.field_image}}
   </div>
   <div class="row">
-  <div class="col-md-3">
+  <div class="col-sm-3">
   {{content.field_director}}
   {{content.field_editing}}
   {{content.field_music}}
   {{content.field_sound}}
 
   </div>
-  <div class="col-md-3">
+  <div class="col-sm-3">
     {{content.field_producer}}
     {{content.field_cast}}
   </div>
-  <div class="col-md-3">
+  <div class="col-sm-3">
     {{content.field_screenplay}}
     {{content.field_shooting}}
     {{content.field_country}}
@@ -109,7 +109,7 @@ set classes = [
     {{content.field_screening}}
     {{content.field_year}}
   </div>
-  {{content.field_contact}}
+  {#{{content.field_contact}}#}
   </div>
   </div>
   </div>
@@ -124,10 +124,10 @@ set classes = [
         </div>
 
         <div>
-          <div class="col-md-6">
+          <div class="col-xs-6">
             {{content.field_title_original}}
           </div>
-          <div class="col-md-6">
+          <div class="col-xs-6">
             {{content.field_date_and_time}}
           </div>
         </div>
