--- a/themes/PAFF/less/pages/utilities.less
+++ b/themes/PAFF/less/pages/utilities.less
@@ -7,10 +7,6 @@
     &:hover{
       color: #3bab8b;
     }
-     &:focus{
-       box-shadow: none;
-       outline: none;
-     }
   }
 }
 .pafforama{
@@ -21,10 +17,6 @@
     color: @brand-news;
     &:hover{
       color: #585492;
-    }
-    &:focus{
-      box-shadow: none;
-      outline: none;
     }
   }
 }
@@ -37,10 +29,6 @@
     &:hover{
       color: #d0161c;
     }
-    &:focus{
-      box-shadow: none;
-      outline: none;
-    }
   }
 }
 .lighthouses{
@@ -51,10 +39,6 @@
     color: @brand-location;
     &:hover{
       color: #d58010;
-    }
-    &:focus{
-      box-shadow: none;
-      outline: none;
     }
   }
 }
@@ -67,10 +51,6 @@
     &:hover{
       color: #e8308f;
     }
-    &:focus{
-      box-shadow: none;
-      outline: none;
-    }
   }
 }
 .the-amazed-spectator{
@@ -82,13 +62,13 @@
     &:hover{
       color: #04abc8;
     }
-    &:focus{
-      box-shadow: none;
-      outline: none;
-    }
   }
 }
 .view-news .content-border{
   border: 5px solid @brand-border ;
   padding: 20px;
+  margin-top: 15px;
+  @media (min-width: @screen-md){
+    margin-top: 0;
+  }
 }
