--- a/themes/PAFF/less/regions/sidebar.less
+++ b/themes/PAFF/less/regions/sidebar.less
@@ -1,6 +1,10 @@
 .region-sidebar-second {
   margin-top: 25px;
   .block{
+    h2{
+      display: inline-block;
+      font-size: 26px;
+    }
     h3{
       font-size: 22px;
     }
