--- a/themes/PAFF/templates/node/film/node--film.html.twig
+++ b/themes/PAFF/templates/node/film/node--film.html.twig
@@ -124,20 +124,20 @@ set classes = [
         </div>
 
         <div>
-          <div class="col-xs-6">
+          <div class="col-sm-6">
             {{content.field_title_original}}
           </div>
-          <div class="col-xs-6">
+          <div class="col-sm-6">
             {{content.field_date_and_time}}
           </div>
+            <div class="col-sm-12">
+                {{content.body}}
+            </div>
         </div>
       </div>
-      <div>
-        {{content.body}}
-      </div>
+      {#<div>#}
+        {#{{content.body}}#}
+      {#</div>#}
   </div>
   </div>
-
-
-
 </article>
