--- a/themes/PAFF/templates/node/film/node--film.html.twig
+++ b/themes/PAFF/templates/node/film/node--film.html.twig
@@ -121,6 +121,8 @@ set classes = [
             <h2 {{ title_attributes }}>
               {{ label }}
             </h2>
+            <h3>{{content.field_selection}}
+            </h3>
         </div>
 
         <div>
@@ -135,9 +137,6 @@ set classes = [
             </div>
         </div>
       </div>
-      {#<div>#}
-        {#{{content.body}}#}
-      {#</div>#}
   </div>
   </div>
 </article>
