--- a/themes/PAFF/less/regions/footer.less
+++ b/themes/PAFF/less/regions/footer.less
@@ -12,6 +12,7 @@
       .menu{
         a{
           display: inline-block;
+          font-weight: bold;
           &:hover{
             background-color: transparent;
           }
