--- a/themes/PAFF/less/pages/locations.less
+++ b/themes/PAFF/less/pages/locations.less
@@ -19,3 +19,14 @@
     }
   }
 }
+.view-locations{
+  .view-content{
+    .views-row{
+      .location{
+        h2{
+          font-size: 28px;
+        }
+      }
+    }
+  }
+}
