--- a/themes/PAFF/templates/node/news/node--article--teaser.html.twig
+++ b/themes/PAFF/templates/node/news/node--article--teaser.html.twig
@@ -87,7 +87,7 @@
 
 
 
-  <div {{ content_attributes.addClass('content, row') }}>
+  <div {{ content_attributes.addClass('content') }}>
       <div class="col-md-3">
           {{content.field_image}}
       </div>
