--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -145,6 +145,7 @@
     right:100%;
   }
   .fa-angle-right {
+    cursor: pointer;
     position: absolute;
     top: 63%;
     transform: translateY(-50%);
