--- a/themes/PAFF/templates/node/news/node--article--teaser.html.twig
+++ b/themes/PAFF/templates/node/news/node--article--teaser.html.twig
@@ -75,18 +75,20 @@
     'clearfix',
   ]
 %}
+{% set date = node.createdtime|format_date('M H:i') %}
 <article{{ attributes.addClass(classes) }}>
 
   {{ title_prefix }}
   {% if not page %}
     <h2{{ title_attributes }}>
       <a href="{{ url }}" rel="bookmark">{{ label }}</a>
+      <span>
+   <h4>  {{date}}
+   </h4>
+ </span>
     </h2>
   {% endif %}
   {{ title_suffix }}
-
-
-
   <div {{ content_attributes.addClass('content') }}>
       <div class="col-md-3">
           {{content.field_image}}
